--- a/package.json
+++ b/package.json
@@ -1,44 +1,38 @@
 {
-  "name": "stapxs-tool-box",
-  "version": "1.0.0",
-  "description": "An Electron application with Vue and TypeScript",
-  "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
-  "scripts": {
-    "format": "prettier --write .",
-    "lint": "eslint --cache .",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
-    "start": "electron-vite preview",
-    "dev": "electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
-  },
-  "dependencies": {
-    "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/utils": "^4.0.0"
-  },
-  "devDependencies": {
-    "@electron-toolkit/eslint-config-prettier": "3.0.0",
-    "@electron-toolkit/eslint-config-ts": "^3.0.0",
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@types/node": "^22.13.4",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "electron": "^34.2.0",
-    "electron-builder": "^25.1.8",
-    "electron-vite": "^3.0.0",
-    "eslint": "^9.20.1",
-    "eslint-plugin-vue": "^9.32.0",
-    "prettier": "^3.5.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.0",
-    "vue": "^3.5.13",
-    "vue-tsc": "^2.2.2"
-  }
+    "name": "stapxs-tool-box",
+    "version": "0.0.1",
+    "description": "这是新的林槐工具箱！",
+    "main": "./out/main/index.js",
+    "author": "Stapx Steve [林槐]",
+    "type": "module",
+    "scripts": {
+        "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
+        "dev": "electron-vite dev",
+        "build": "electron-vite build && electron-builder"
+    },
+    "dependencies": {
+        "@electron-toolkit/preload": "^3.0.1",
+        "@electron-toolkit/utils": "^4.0.0",
+        "electron-store": "^10.0.0",
+        "electron-window-state": "^5.0.3",
+        "log4js": "^6.9.1"
+    },
+    "devDependencies": {
+        "@electron-toolkit/eslint-config": "^1.0.2",
+        "@electron-toolkit/eslint-config-ts": "^2.0.0",
+        "@electron-toolkit/tsconfig": "^1.0.1",
+        "@rushstack/eslint-patch": "^1.10.3",
+        "@types/node": "^22.13.4",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vue/eslint-config-typescript": "^13.0.0",
+        "electron": "^34.2.0",
+        "electron-builder": "^25.1.8",
+        "electron-vite": "^3.0.0",
+        "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^9.26.0",
+        "typescript": "^5.7.3",
+        "vite": "^6.1.0",
+        "vue": "^3.5.13",
+        "vue-tsc": "^2.2.2"
+    }
 }
