--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
         "@electron-toolkit/eslint-config": "^1.0.2",
         "@electron-toolkit/eslint-config-ts": "^2.0.0",
         "@electron-toolkit/tsconfig": "^1.0.1",
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
         "@rushstack/eslint-patch": "^1.10.3",
+        "@stapxs/umami-logger-typescript": "^1.0.12",
         "@types/node": "^22.13.4",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vue/eslint-config-typescript": "^13.0.0",
@@ -30,6 +34,7 @@
         "electron-vite": "^3.0.0",
         "eslint": "^8.57.0",
         "eslint-plugin-vue": "^9.26.0",
+        "spacingjs": "^1.0.9",
         "typescript": "^5.7.3",
         "vite": "^6.1.0",
         "vue": "^3.5.13",
